@@ -2,7 +2,7 @@ Index: linux-2.6.22-source/drivers/scsi/coscsi.c
 ===================================================================
 --- /dev/null
 +++ linux-2.6.22-source/drivers/scsi/coscsi.c
-@@ -0,0 +1,1160 @@
+@@ -0,0 +1,1168 @@
 +
 +#include <linux/module.h>
 +#include <linux/interrupt.h>
@@ -22,6 +22,7 @@ Index: linux-2.6.22-source/drivers/scsi/coscsi.c
 +#include <linux/cooperative_internal.h>
 +#include <linux/cooperative_pci.h>
 +
++#include <linux/cdrom.h>
 +#include <scsi/coscsi.h>
 +
 +/* Special pass through type */
@@ -61,9 +62,10 @@ Index: linux-2.6.22-source/drivers/scsi/coscsi.c
 +#define DUMP_DATA 0
 +#endif
 +
-+/* OPs not found in scsi.h */
-+#define GET_CONFIGURATION	0x46
-+#define GET_EVENT_STATUS	0x4a
++/* OPs not found in scsi.h, use from cdrom.h */
++#define GET_CONFIGURATION	GPCMD_GET_CONFIGURATION
++#define GET_EVENT_STATUS	GPCMD_GET_EVENT_STATUS_NOTIFICATION
++#define READ_DISC_INFO		GPCMD_READ_DISC_INFO
 +
 +/* Sense codes */
 +#define LOGICAL_UNIT_NOT_READY 0x4
@@ -118,7 +120,6 @@ Index: linux-2.6.22-source/drivers/scsi/coscsi.c
 +        int x,y,len;
 +
 +        printk(KERN_INFO "scsi%d: %s(%d bytes):\n",unit,str,data_len);
-+//	len = min(16, data_len);
 +	len = data_len;
 +        p = data;
 +        for(x=y=0; x < len; x++) {
@@ -264,7 +265,6 @@ Index: linux-2.6.22-source/drivers/scsi/coscsi.c
 +		if (host_open(wp->dp))
 +			return 1;
 +	}
-+
 +
 +	/* XXX needed when clustering is enabled */
 +	count = dma_map_sg(&scp->device->host->shost_gendev, sg, scp->use_sg, scp->sc_data_direction);
@@ -919,10 +919,18 @@ Index: linux-2.6.22-source/drivers/scsi/coscsi.c
 +	case SYNCHRONIZE_CACHE:
 +		scp->result = GOOD;
 +		break;
++	case READ_DISC_INFO:
++		{
++			disc_information di = { 0, };
++
++			di.disc_information_length = cpu_to_be16(1);
++			/* di.erasable = 0; */
++			scp->result = response(&worker, &di, sizeof(di.disc_information_length) + 1);
++		}
++		break;
 +	default:
 +		printk(KERN_NOTICE "scsi%d: unhandled opcode: %x\n", dp->unit, scp->cmnd[0]);
 +		scp->result = check_condition(dp, ILLEGAL_REQUEST, INVALID_FIELD_IN_CDB, 0);
-+		break;
 +	}
 +
 +req_done:
